Revision history for WWW-Crawler-Mojo

0.07 2014/09/20
  - Improved error event API.
  - Improved checkbot example.

0.06 2014/09/20
  - Improved URL detection.

0.05 2014/09/15
  - Fixed a bug on request body generation.

0.04 2014/09/07
  - Fixed class and method terminology.

0.03 2014/09/07
  - Improved that resolved URIs are alway a Mojo::URL instance.
  - Added original_uri to retrieve original uri from redirect history.
  - Added requeue method to re-try in case an error occured.

0.02 2014/09/07
  - Recovering failing release

0.01 2014/09/07
  - initial release