@@ -3,6 +3,7 @@ Revision history for WWW-Crawler-Mojo
 0.07 2014/09/20
   - Improved error event API.
   - Improved checkbot example.
+  - Renamed discover method to browse.
 
 0.06 2014/09/20
   - Improved URL detection.
